Fix rows on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,34 @@ section {
 }
 
 
+@media (max-width: 450px) {
+  .container {
+    width: 100%;
+  }
+  .container-wide {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .img-container {
+    /*display: inline-block;*/
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .big-img {
+      padding-left: 0;
+      padding-right: 0;
+  }
+
+  .double-col {
+    padding-left: 1.3em;
+    padding-right: 1.3em;
+  }
+
+}
+
+
 /*   ==========   NAVBAR   ==========   */
 
 .navbar-custom {
@@ -908,6 +936,21 @@ video#jupiter-live {
   display: block;
 }
 
+@media (max-width: 450px) {
+
+  .underice-row {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+/*  .underice-block {
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+}*/
+
+}
+
 
 /*   ==========   BLACK   ===========   */
 
@@ -1083,6 +1126,11 @@ video#jupiter-live {
   padding-bottom: 50%;
 }
 
+#so {
+  padding-left: 6vw;
+  padding-right: 6vw;
+}
+
 #may-be {
   /*width: 90%;*/
   /*margin-top: 3em;*/
@@ -1099,42 +1147,16 @@ video#jupiter-live {
   width: 100%;
   margin: 0;
   padding: 0;
+  margin-bottom: -2px;
 }
 
+
 @media (max-width: 992px) {
+
   #trio-img {
     padding-bottom: 0;
     margin-bottom: -3.5em;
   }
-
-}
-
-
-/*
-ul.banner-social-buttons {
-  margin-top: 0;
-}
-@media (max-width: 1199px) {
-  ul.banner-social-buttons {
-    margin-top: 15px;
-  }
-
-}
-
-@media (max-width: 767px) {
-  ul.banner-social-buttons li {
-    display: block;
-    margin-bottom: 20px;
-    padding: 0;
-  }
-  ul.banner-social-buttons li:last-child {
-    margin-bottom: 0;
-  }
-
-}*/
-
-
-@media (max-width: 992px) {
 
   .r-img-left {
     margin-left: -50%;
@@ -1159,6 +1181,23 @@ ul.banner-social-buttons {
     padding-top: 5em;
     padding-bottom: 5em;
   }
+
+}
+
+
+@media (max-width: 450px) {
+
+#img-worm2 {
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+
+}
+
+#may-be, #so {
+    padding-left: 3vw;
+  padding-right: 3vw;
+}
 
 }
 
